--- a/about.html
+++ b/about.html
@@ -79,12 +79,12 @@
                   <a class="text-icon text-phone text-white" href="#!">+995 551 405 123</a>
                 </div>
               </div>
-              <a class="btn btn-mini dark-btn" href="page-schedule.html">
+              <button class="btn btn-mini dark-btn" frame-btn="login-modal">
                 <svg class="svg-person" width="16" height="16">
                   <use href="./img/svg-sprite.svg#svg-person"></use>
                 </svg>
-                <div class="text-white">Кабинет</div>
-              </a>
+                <div class="text-white">Войти</div>
+              </button>
               <!--=============Выбор страны и валюты на экранах от 992 пикс ================-->
               <div class="mySelect mySelect--absolute mySelect--dark mySelect--radio mySelect--currency">
                 <div class="mySelect-input">
@@ -403,6 +403,9 @@
                             </div>
                             <div class="text-24 mb-8">Антадзе Тамар</div>
                             <div class="card-header__list">
+                              <div class="text-14 text-gray3">Офтальмолог</div>
+                              <div class="text-14 text-gray3">Дерматовенеролог </div>
+                              <div class="text-14 text-gray3">Мануальный терапевт</div>
                               <div class="text-14 text-gray3">Стаж 17 лет</div>
                               <div class="text-14 text-gray3">Высшая категория</div>
                             </div>
@@ -475,6 +478,9 @@
                             </div>
                             <div class="text-24 mb-8">Антадзе Тамар</div>
                             <div class="card-header__list">
+                              <div class="text-14 text-gray3">Офтальмолог</div>
+                              <div class="text-14 text-gray3">Дерматовенеролог </div>
+                              <div class="text-14 text-gray3">Мануальный терапевт</div>
                               <div class="text-14 text-gray3">Стаж 17 лет</div>
                               <div class="text-14 text-gray3">Высшая категория</div>
                             </div>
@@ -556,6 +562,9 @@
                             </div>
                             <div class="text-24 mb-8">Лордкипанидзе Мария</div>
                             <div class="card-header__list">
+                              <div class="text-14 text-gray3">Офтальмолог</div>
+                              <div class="text-14 text-gray3">Дерматовенеролог </div>
+                              <div class="text-14 text-gray3">Мануальный терапевт</div>
                               <div class="text-14 text-gray3">Стаж 17 лет</div>
                               <div class="text-14 text-gray3">Высшая категория</div>
                             </div>
@@ -628,6 +637,9 @@
                             </div>
                             <div class="text-24 mb-8">Лордкипанидзе Мария</div>
                             <div class="card-header__list">
+                              <div class="text-14 text-gray3">Офтальмолог</div>
+                              <div class="text-14 text-gray3">Дерматовенеролог </div>
+                              <div class="text-14 text-gray3">Мануальный терапевт</div>
                               <div class="text-14 text-gray3">Стаж 17 лет</div>
                               <div class="text-14 text-gray3">Высшая категория</div>
                             </div>
@@ -709,6 +721,9 @@
                             </div>
                             <div class="text-24 mb-8">Антадзе Тамар</div>
                             <div class="card-header__list">
+                              <div class="text-14 text-gray3">Офтальмолог</div>
+                              <div class="text-14 text-gray3">Дерматовенеролог </div>
+                              <div class="text-14 text-gray3">Мануальный терапевт</div>
                               <div class="text-14 text-gray3">Стаж 17 лет</div>
                               <div class="text-14 text-gray3">Высшая категория</div>
                             </div>
@@ -781,6 +796,9 @@
                             </div>
                             <div class="text-24 mb-8">Антадзе Тамар</div>
                             <div class="card-header__list">
+                              <div class="text-14 text-gray3">Офтальмолог</div>
+                              <div class="text-14 text-gray3">Дерматовенеролог </div>
+                              <div class="text-14 text-gray3">Мануальный терапевт</div>
                               <div class="text-14 text-gray3">Стаж 17 лет</div>
                               <div class="text-14 text-gray3">Высшая категория</div>
                             </div>
@@ -862,6 +880,9 @@
                             </div>
                             <div class="text-24 mb-8">Лордкипанидзе Мария</div>
                             <div class="card-header__list">
+                              <div class="text-14 text-gray3">Офтальмолог</div>
+                              <div class="text-14 text-gray3">Дерматовенеролог </div>
+                              <div class="text-14 text-gray3">Мануальный терапевт</div>
                               <div class="text-14 text-gray3">Стаж 17 лет</div>
                               <div class="text-14 text-gray3">Высшая категория</div>
                             </div>
@@ -934,6 +955,9 @@
                             </div>
                             <div class="text-24 mb-8">Лордкипанидзе Мария</div>
                             <div class="card-header__list">
+                              <div class="text-14 text-gray3">Офтальмолог</div>
+                              <div class="text-14 text-gray3">Дерматовенеролог </div>
+                              <div class="text-14 text-gray3">Мануальный терапевт</div>
                               <div class="text-14 text-gray3">Стаж 17 лет</div>
                               <div class="text-14 text-gray3">Высшая категория</div>
                             </div>
