--- a/done-appoint-modal.html
+++ b/done-appoint-modal.html
@@ -79,12 +79,12 @@
                   <a class="text-icon text-phone text-white" href="#!">+995 551 405 123</a>
                 </div>
               </div>
-              <a class="btn btn-mini dark-btn" href="page-schedule.html">
+              <button class="btn btn-mini dark-btn" frame-btn="login-modal">
                 <svg class="svg-person" width="16" height="16">
                   <use href="./img/svg-sprite.svg#svg-person"></use>
                 </svg>
-                <div class="text-white">Кабинет</div>
-              </a>
+                <div class="text-white">Войти</div>
+              </button>
               <!--=============Выбор страны и валюты на экранах от 992 пикс ================-->
               <div class="mySelect mySelect--absolute mySelect--dark mySelect--radio mySelect--currency">
                 <div class="mySelect-input">
@@ -482,6 +482,12 @@
               <span class="custom-checkbox"> </span>
               <span class="custom-checkbox__text">Работают по страховке</span>
             </label>
+            <div class="ml-auto">
+              <button class="btn-reset">
+                <div class="icon-close"></div>
+                <span>Сбросить фильтры</span>
+              </button>
+            </div>
           </div>
         </div>
         <div class="section-filters-mobile hidden-1200">
@@ -512,6 +518,9 @@
                     </div>
                     <div class="text-24 mb-8">Голетиани Мариам</div>
                     <div class="card-header__list">
+                      <div class="text-14 text-gray3">Офтальмолог</div>
+                      <div class="text-14 text-gray3">Дерматовенеролог </div>
+                      <div class="text-14 text-gray3">Мануальный терапевт</div>
                       <div class="text-14 text-gray3">Стаж 17 лет</div>
                       <div class="text-14 text-gray3">Высшая категория</div>
                     </div>
@@ -581,6 +590,9 @@
                     </div>
                     <div class="text-24 mb-8">Голетиани Мариам</div>
                     <div class="card-header__list">
+                      <div class="text-14 text-gray3">Офтальмолог</div>
+                      <div class="text-14 text-gray3">Дерматовенеролог </div>
+                      <div class="text-14 text-gray3">Мануальный терапевт</div>
                       <div class="text-14 text-gray3">Стаж 17 лет</div>
                       <div class="text-14 text-gray3">Высшая категория</div>
                     </div>
@@ -737,6 +749,9 @@
                     </div>
                     <div class="text-24 mb-8">Лордкипанидзе Мария</div>
                     <div class="card-header__list">
+                      <div class="text-14 text-gray3">Офтальмолог</div>
+                      <div class="text-14 text-gray3">Дерматовенеролог </div>
+                      <div class="text-14 text-gray3">Мануальный терапевт</div>
                       <div class="text-14 text-gray3">Стаж 17 лет</div>
                       <div class="text-14 text-gray3">Высшая категория</div>
                     </div>
@@ -806,6 +821,9 @@
                     </div>
                     <div class="text-24 mb-8">Лордкипанидзе Мария</div>
                     <div class="card-header__list">
+                      <div class="text-14 text-gray3">Офтальмолог</div>
+                      <div class="text-14 text-gray3">Дерматовенеролог </div>
+                      <div class="text-14 text-gray3">Мануальный терапевт</div>
                       <div class="text-14 text-gray3">Стаж 17 лет</div>
                       <div class="text-14 text-gray3">Высшая категория</div>
                     </div>
@@ -1051,6 +1069,9 @@
                     </div>
                     <div class="text-24 mb-8">Антадзе Тамар</div>
                     <div class="card-header__list">
+                      <div class="text-14 text-gray3">Офтальмолог</div>
+                      <div class="text-14 text-gray3">Дерматовенеролог </div>
+                      <div class="text-14 text-gray3">Мануальный терапевт</div>
                       <div class="text-14 text-gray3">Стаж 17 лет</div>
                       <div class="text-14 text-gray3">Высшая категория</div>
                     </div>
@@ -1235,6 +1256,9 @@
                             </div>
                             <div class="text-24 mb-8">Антадзе Тамар</div>
                             <div class="card-header__list">
+                              <div class="text-14 text-gray3">Офтальмолог</div>
+                              <div class="text-14 text-gray3">Дерматовенеролог </div>
+                              <div class="text-14 text-gray3">Мануальный терапевт</div>
                               <div class="text-14 text-gray3">Стаж 17 лет</div>
                               <div class="text-14 text-gray3">Высшая категория</div>
                             </div>
@@ -1307,6 +1331,9 @@
                             </div>
                             <div class="text-24 mb-8">Антадзе Тамар</div>
                             <div class="card-header__list">
+                              <div class="text-14 text-gray3">Офтальмолог</div>
+                              <div class="text-14 text-gray3">Дерматовенеролог </div>
+                              <div class="text-14 text-gray3">Мануальный терапевт</div>
                               <div class="text-14 text-gray3">Стаж 17 лет</div>
                               <div class="text-14 text-gray3">Высшая категория</div>
                             </div>
@@ -1388,6 +1415,9 @@
                             </div>
                             <div class="text-24 mb-8">Лордкипанидзе Мария</div>
                             <div class="card-header__list">
+                              <div class="text-14 text-gray3">Офтальмолог</div>
+                              <div class="text-14 text-gray3">Дерматовенеролог </div>
+                              <div class="text-14 text-gray3">Мануальный терапевт</div>
                               <div class="text-14 text-gray3">Стаж 17 лет</div>
                               <div class="text-14 text-gray3">Высшая категория</div>
                             </div>
@@ -1460,6 +1490,9 @@
                             </div>
                             <div class="text-24 mb-8">Лордкипанидзе Мария</div>
                             <div class="card-header__list">
+                              <div class="text-14 text-gray3">Офтальмолог</div>
+                              <div class="text-14 text-gray3">Дерматовенеролог </div>
+                              <div class="text-14 text-gray3">Мануальный терапевт</div>
                               <div class="text-14 text-gray3">Стаж 17 лет</div>
                               <div class="text-14 text-gray3">Высшая категория</div>
                             </div>
@@ -1541,6 +1574,9 @@
                             </div>
                             <div class="text-24 mb-8">Антадзе Тамар</div>
                             <div class="card-header__list">
+                              <div class="text-14 text-gray3">Офтальмолог</div>
+                              <div class="text-14 text-gray3">Дерматовенеролог </div>
+                              <div class="text-14 text-gray3">Мануальный терапевт</div>
                               <div class="text-14 text-gray3">Стаж 17 лет</div>
                               <div class="text-14 text-gray3">Высшая категория</div>
                             </div>
@@ -1613,6 +1649,9 @@
                             </div>
                             <div class="text-24 mb-8">Антадзе Тамар</div>
                             <div class="card-header__list">
+                              <div class="text-14 text-gray3">Офтальмолог</div>
+                              <div class="text-14 text-gray3">Дерматовенеролог </div>
+                              <div class="text-14 text-gray3">Мануальный терапевт</div>
                               <div class="text-14 text-gray3">Стаж 17 лет</div>
                               <div class="text-14 text-gray3">Высшая категория</div>
                             </div>
@@ -1694,6 +1733,9 @@
                             </div>
                             <div class="text-24 mb-8">Лордкипанидзе Мария</div>
                             <div class="card-header__list">
+                              <div class="text-14 text-gray3">Офтальмолог</div>
+                              <div class="text-14 text-gray3">Дерматовенеролог </div>
+                              <div class="text-14 text-gray3">Мануальный терапевт</div>
                               <div class="text-14 text-gray3">Стаж 17 лет</div>
                               <div class="text-14 text-gray3">Высшая категория</div>
                             </div>
@@ -1766,6 +1808,9 @@
                             </div>
                             <div class="text-24 mb-8">Лордкипанидзе Мария</div>
                             <div class="card-header__list">
+                              <div class="text-14 text-gray3">Офтальмолог</div>
+                              <div class="text-14 text-gray3">Дерматовенеролог </div>
+                              <div class="text-14 text-gray3">Мануальный терапевт</div>
                               <div class="text-14 text-gray3">Стаж 17 лет</div>
                               <div class="text-14 text-gray3">Высшая категория</div>
                             </div>
@@ -2107,13 +2152,12 @@
             <div class="appoint-form__head-right">
               <div class="card-header">
                 <div class="flex-vertical-center gap-16">
-                  <div class="text-14 text-gray"></div>
                   <div class="text-14 text-gray3">Работаем со страховкой</div>
                 </div>
                 <div class="text-24 mb-8">Эристави Тамар</div>
                 <div class="card-header__list">
                   <div class="text-14 text-gray3">Стаж 17 лет</div>
-                  <div class="text-14 text-gray3">Высшая категория</div>
+                  <div class="text-14 text-gray3">Высшая категория </div>
                 </div>
               </div>
               <div class="appoint-form__info-list">
@@ -2167,6 +2211,7 @@
                 <!--======== block data ============-->
               </div>
             </div>
+            <!--======выпадашка с выбором времени и даты. Изначально скрыта. Отображается за счет добавления класса "visible" по клику на кнопку с id="openAppointTime". Повторный клик по кнопке-удаляет класс Visible и выпадашка скрывается====== -->
             <div class="cs-wrapper" id="tableAppointTime">
               <!--======slider navigation=======-->
               <div class="cs-next">
