--- a/edit-profile-visitor.html
+++ b/edit-profile-visitor.html
@@ -353,8 +353,8 @@
               </li>
             </ul>
           </div>
-          <div class="flex-vertical-center flex-between mt-40">
-            <button class="btn btn-44 btn--orange" frame-close>Отмена</button>
+          <div class="flex-vertical-center gap-20 mt-40">
+            <button class="btn btn-44 btn--orange" frame-close>Отменить</button>
             <button class="btn btn-44" frame-close>Сохранить</button>
           </div>
         </form>
@@ -390,8 +390,8 @@
               </li>
             </ul>
           </div>
-          <div class="flex-vertical-center flex-between mt-40">
-            <button class="btn btn-44 btn--orange" frame-close>Отмена</button>
+          <div class="flex-vertical-center gap-20 mt-40">
+            <button class="btn btn-44 btn--orange" frame-close>Отменить</button>
             <button class="btn btn-44" frame-close>Сохранить</button>
           </div>
         </form>
