--- a/empl-schedule.html
+++ b/empl-schedule.html
@@ -497,9 +497,9 @@
                       <span class="custom-checkbox"> </span>
                       <span class="custom-checkbox__text">Воскресенье</span>
                     </label>
-                    <div class="mySelect-drop__btns flex-vertical-center flex-between mt-16">
-                      <button class="btn btn-38 btn--orange cancel">Отмена</button>
-                      <button class="btn btn-38 confirm">Применить</button>
+                    <div class="mySelect-drop__btns flex-vertical-center gap-20 mt-16">
+                      <button class="btn btn-38 confirm">Добавить</button>
+                      <button class="btn btn-38 btn--orange cancel">Отменить</button>
                     </div>
                   </div>
                 </div>
@@ -547,10 +547,23 @@
               </div>
             </div>
           </div>
+          <div class="rules-form-block">
+            <div class="title-18 mb-24">Длительность приема</div>
+            <div class="flex-vertical-center gap-32">
+              <div class="form-box">
+                <label class="text-16 text-gray3">Часы</label>
+                <input class="form-input" type="number" name="">
+              </div>
+              <div class="form-box">
+                <label class="text-16 text-gray3">Минуты</label>
+                <input class="form-input" type="number" name="">
+              </div>
+            </div>
+          </div>
         </div>
-        <div class="modal-frame__footer mt-auto border-top flex-vertical-center flex-between">
-          <button class="btn btn-44 btn--orange">Отмена</button>
+        <div class="modal-frame__footer mt-auto flex-vertical-center gap-20">
           <button class="btn btn-44">Добавить</button>
+          <button class="btn btn-44 btn--orange">Отменить</button>
         </div>
       </form>
     </div>
@@ -614,7 +627,7 @@
       </div>
       <div class="modal-frame__body">
         <div class="title-20 text-center">Вы уверены, что хотите удалить?</div>
-        <div class="form-btns flex-vertical-center gap-32 mt-32">
+        <div class="form-btns flex-vertical-center gap-20 mt-32">
           <button class="btn btn--orange" frame-close>Отменить</button>
           <button class="btn btn--primary" type="submit">Подтверждаю</button>
         </div>
@@ -700,9 +713,9 @@
                       <span class="custom-checkbox"> </span>
                       <span class="custom-checkbox__text">Воскресенье</span>
                     </label>
-                    <div class="mySelect-drop__btns flex-vertical-center flex-between mt-16">
-                      <button class="btn btn-38 btn--orange cancel">Отмена</button>
-                      <button class="btn btn-38 confirm">Применить</button>
+                    <div class="mySelect-drop__btns flex-vertical-center gap-20 mt-16">
+                      <button class="btn btn-38 btn--orange cancel">Отменить</button>
+                      <button class="btn btn-38 confirm">Сохранить</button>
                     </div>
                   </div>
                 </div>
@@ -783,9 +796,9 @@
             </div>
           </div>
         </div>
-        <div class="modal-frame__footer mt-auto border-top flex-vertical-center flex-between">
-          <button class="btn btn-44 btn--orange">Отмена</button>
+        <div class="modal-frame__footer mt-auto border-top flex-vertical-center gap-20">
           <button class="btn btn-44">Сохранить</button>
+          <button class="btn btn-44 btn--orange">Отменить</button>
         </div>
       </form>
     </div>
@@ -904,10 +917,10 @@
                     <span class="custom-switch__text">Весь день</span>
                   </label>
                 </div>
-                <div class="form-btns flex-vertical-center gap-32 mt-auto">
-                  <button class="btn btn--accent" frame-close>Удалить</button>
-                  <button class="btn btn--orange" frame-close>Отменить</button>
+                <div class="form-btns flex-vertical-center gap-20 mt-auto">
                   <button class="btn btn--primary" type="submit">Добавить</button>
+                  <button class="btn btn--orange" frame-close>Отменить</button>
+                  <button class="btn btn--accent" frame-close>Удалить</button>
                 </div>
               </form>
               <!--========вкладка Отпуск ======-->
@@ -999,9 +1012,9 @@
                     </div>
                   </div>
                 </div>
-                <div class="form-btns flex-vertical-center gap-32 mt-auto">
-                  <button class="btn btn--orange" frame-close>Отменить</button>
+                <div class="form-btns flex-vertical-center gap-20 mt-auto">
                   <button class="btn btn--primary" type="submit">Добавить</button>
+                  <button class="btn btn--orange" frame-close>Отменить</button>
                 </div>
               </form>
             </div>
