--- a/employees-page.html
+++ b/employees-page.html
@@ -402,9 +402,9 @@
           </div>
         </form>
       </div>
-      <div class="modal-frame__footer mt-auto border-top flex-vertical-center flex-between">
-        <button class="btn btn-44 btn--orange" frame-close>Отмена</button>
+      <div class="modal-frame__footer mt-auto border-top flex-vertical-center gap-20">
         <button class="btn btn-44">Сохранить</button>
+        <button class="btn btn-44 btn--orange" frame-close>Отменить</button>
       </div>
     </div>
   </div>
