--- a/index.html
+++ b/index.html
@@ -46,9 +46,19 @@
         <span>Цены</span>
       </a>
       <a href="confirm-appoint-modal.html">
-        <span>Авторизация
-          <br> модальное окно
-        </span>
+        <span>Авторизация шаг #1</span>
+      </a>
+      <a href="authoriz-2.html">
+        <span>Авторизация шаг #2</span>
+      </a>
+      <a href="authoriz-3.html">
+        <span>Авторизация шаг #3</span>
+      </a>
+      <a href="authoriz-4.html">
+        <span>Авторизация шаг #4</span>
+      </a>
+      <a href="authoriz-5.html">
+        <span>Авторизация шаг #5</span>
       </a>
       <a href="page-404.html">
         <span>404</span>
@@ -58,6 +68,11 @@
     <div class="start-page__cards mb-32">
       <a href="page-schedule.html">
         <span>Расписание</span>
+      </a>
+      <a href="page-schedule-2.html">
+        <span>Расписание. Модальное окно</span>
+        <br>
+        <span>"Вы не сохранили изменения"</span>
       </a>
       <a href="page-tasks.html">
         <span>Задачи</span>
@@ -79,7 +94,7 @@
       </a>
     </div>
     <h2 class="text-center mb-32">Пациенты - sublinks</h2>
-    <div class="start-page__cards">
+    <div class="start-page__cards mb-32">
       <a href="add-profile-visitor.html">
         <span>Добавить пациента</span>
       </a>
@@ -98,13 +113,37 @@
         <span>Посещения пациента</span>
       </a>
     </div>
+    <h2 class="text-center mb-32">Кабинет Пациента</h2>
+    <div class="start-page__cards mb-32">
+      <a href="patient-main.html">
+        <span>Пациент - Главная</span>
+      </a>
+      <a href="patient-edit.html">
+        <span>Пациент - Редактировать</span>
+      </a>
+      <a href="patient-favorite-empty.html">
+        <span>Пациент - Нет избранного</span>
+      </a>
+      <a href="patient-favorite.html">
+        <span>Пациент - Избранное</span>
+      </a>
+      <a href="patient-reviews.html">
+        <span>Пациент - Отзывы</span>
+      </a>
+      <a href="patient-history.html">
+        <span>Пациент - Записи</span>
+      </a>
+    </div>
     <h2 class="text-center mb-32">Модалки - всплывашки</h2>
     <div class="start-page__cards">
       <a href="duplication-modal.html">
         <span>Дублирование пациента в БД</span>
       </a>
+      <a href="success-reg-empl.html">
+        <span>Успешная регистрация Исполнителя</span>
+      </a>
       <a href="success-reg.html">
-        <span>Успешная регистрация</span>
+        <span>Успешная регистрация Пациента</span>
       </a>
       <a href="restore-passw.html">
         <span>Ошибка авторизации</span>
