--- a/main.html
+++ b/main.html
@@ -79,12 +79,12 @@
                   <a class="text-icon text-phone text-white" href="#!">+995 551 405 123</a>
                 </div>
               </div>
-              <a class="btn btn-mini dark-btn" href="page-schedule.html">
+              <button class="btn btn-mini dark-btn" frame-btn="login-modal">
                 <svg class="svg-person" width="16" height="16">
                   <use href="./img/svg-sprite.svg#svg-person"></use>
                 </svg>
-                <div class="text-white">Кабинет</div>
-              </a>
+                <div class="text-white">Войти</div>
+              </button>
               <!--=============Выбор страны и валюты на экранах от 992 пикс ================-->
               <div class="mySelect mySelect--absolute mySelect--dark mySelect--radio mySelect--currency">
                 <div class="mySelect-input">
@@ -482,6 +482,12 @@
               <span class="custom-checkbox"> </span>
               <span class="custom-checkbox__text">Работают по страховке</span>
             </label>
+            <div class="ml-auto">
+              <button class="btn-reset">
+                <div class="icon-close"></div>
+                <span>Сбросить фильтры</span>
+              </button>
+            </div>
           </div>
         </div>
         <div class="section-filters-mobile hidden-1200">
@@ -512,6 +518,9 @@
                     </div>
                     <div class="text-24 mb-8">Голетиани Мариам</div>
                     <div class="card-header__list">
+                      <div class="text-14 text-gray3">Офтальмолог</div>
+                      <div class="text-14 text-gray3">Дерматовенеролог </div>
+                      <div class="text-14 text-gray3">Мануальный терапевт</div>
                       <div class="text-14 text-gray3">Стаж 17 лет</div>
                       <div class="text-14 text-gray3">Высшая категория</div>
                     </div>
@@ -581,6 +590,9 @@
                     </div>
                     <div class="text-24 mb-8">Голетиани Мариам</div>
                     <div class="card-header__list">
+                      <div class="text-14 text-gray3">Офтальмолог</div>
+                      <div class="text-14 text-gray3">Дерматовенеролог </div>
+                      <div class="text-14 text-gray3">Мануальный терапевт</div>
                       <div class="text-14 text-gray3">Стаж 17 лет</div>
                       <div class="text-14 text-gray3">Высшая категория</div>
                     </div>
@@ -737,6 +749,9 @@
                     </div>
                     <div class="text-24 mb-8">Лордкипанидзе Мария</div>
                     <div class="card-header__list">
+                      <div class="text-14 text-gray3">Офтальмолог</div>
+                      <div class="text-14 text-gray3">Дерматовенеролог </div>
+                      <div class="text-14 text-gray3">Мануальный терапевт</div>
                       <div class="text-14 text-gray3">Стаж 17 лет</div>
                       <div class="text-14 text-gray3">Высшая категория</div>
                     </div>
@@ -806,6 +821,9 @@
                     </div>
                     <div class="text-24 mb-8">Лордкипанидзе Мария</div>
                     <div class="card-header__list">
+                      <div class="text-14 text-gray3">Офтальмолог</div>
+                      <div class="text-14 text-gray3">Дерматовенеролог </div>
+                      <div class="text-14 text-gray3">Мануальный терапевт</div>
                       <div class="text-14 text-gray3">Стаж 17 лет</div>
                       <div class="text-14 text-gray3">Высшая категория</div>
                     </div>
@@ -1051,6 +1069,9 @@
                     </div>
                     <div class="text-24 mb-8">Антадзе Тамар</div>
                     <div class="card-header__list">
+                      <div class="text-14 text-gray3">Офтальмолог</div>
+                      <div class="text-14 text-gray3">Дерматовенеролог </div>
+                      <div class="text-14 text-gray3">Мануальный терапевт</div>
                       <div class="text-14 text-gray3">Стаж 17 лет</div>
                       <div class="text-14 text-gray3">Высшая категория</div>
                     </div>
@@ -1235,6 +1256,9 @@
                             </div>
                             <div class="text-24 mb-8">Антадзе Тамар</div>
                             <div class="card-header__list">
+                              <div class="text-14 text-gray3">Офтальмолог</div>
+                              <div class="text-14 text-gray3">Дерматовенеролог </div>
+                              <div class="text-14 text-gray3">Мануальный терапевт</div>
                               <div class="text-14 text-gray3">Стаж 17 лет</div>
                               <div class="text-14 text-gray3">Высшая категория</div>
                             </div>
@@ -1307,6 +1331,9 @@
                             </div>
                             <div class="text-24 mb-8">Антадзе Тамар</div>
                             <div class="card-header__list">
+                              <div class="text-14 text-gray3">Офтальмолог</div>
+                              <div class="text-14 text-gray3">Дерматовенеролог </div>
+                              <div class="text-14 text-gray3">Мануальный терапевт</div>
                               <div class="text-14 text-gray3">Стаж 17 лет</div>
                               <div class="text-14 text-gray3">Высшая категория</div>
                             </div>
@@ -1388,6 +1415,9 @@
                             </div>
                             <div class="text-24 mb-8">Лордкипанидзе Мария</div>
                             <div class="card-header__list">
+                              <div class="text-14 text-gray3">Офтальмолог</div>
+                              <div class="text-14 text-gray3">Дерматовенеролог </div>
+                              <div class="text-14 text-gray3">Мануальный терапевт</div>
                               <div class="text-14 text-gray3">Стаж 17 лет</div>
                               <div class="text-14 text-gray3">Высшая категория</div>
                             </div>
@@ -1460,6 +1490,9 @@
                             </div>
                             <div class="text-24 mb-8">Лордкипанидзе Мария</div>
                             <div class="card-header__list">
+                              <div class="text-14 text-gray3">Офтальмолог</div>
+                              <div class="text-14 text-gray3">Дерматовенеролог </div>
+                              <div class="text-14 text-gray3">Мануальный терапевт</div>
                               <div class="text-14 text-gray3">Стаж 17 лет</div>
                               <div class="text-14 text-gray3">Высшая категория</div>
                             </div>
@@ -1541,6 +1574,9 @@
                             </div>
                             <div class="text-24 mb-8">Антадзе Тамар</div>
                             <div class="card-header__list">
+                              <div class="text-14 text-gray3">Офтальмолог</div>
+                              <div class="text-14 text-gray3">Дерматовенеролог </div>
+                              <div class="text-14 text-gray3">Мануальный терапевт</div>
                               <div class="text-14 text-gray3">Стаж 17 лет</div>
                               <div class="text-14 text-gray3">Высшая категория</div>
                             </div>
@@ -1613,6 +1649,9 @@
                             </div>
                             <div class="text-24 mb-8">Антадзе Тамар</div>
                             <div class="card-header__list">
+                              <div class="text-14 text-gray3">Офтальмолог</div>
+                              <div class="text-14 text-gray3">Дерматовенеролог </div>
+                              <div class="text-14 text-gray3">Мануальный терапевт</div>
                               <div class="text-14 text-gray3">Стаж 17 лет</div>
                               <div class="text-14 text-gray3">Высшая категория</div>
                             </div>
@@ -1694,6 +1733,9 @@
                             </div>
                             <div class="text-24 mb-8">Лордкипанидзе Мария</div>
                             <div class="card-header__list">
+                              <div class="text-14 text-gray3">Офтальмолог</div>
+                              <div class="text-14 text-gray3">Дерматовенеролог </div>
+                              <div class="text-14 text-gray3">Мануальный терапевт</div>
                               <div class="text-14 text-gray3">Стаж 17 лет</div>
                               <div class="text-14 text-gray3">Высшая категория</div>
                             </div>
@@ -1766,6 +1808,9 @@
                             </div>
                             <div class="text-24 mb-8">Лордкипанидзе Мария</div>
                             <div class="card-header__list">
+                              <div class="text-14 text-gray3">Офтальмолог</div>
+                              <div class="text-14 text-gray3">Дерматовенеролог </div>
+                              <div class="text-14 text-gray3">Мануальный терапевт</div>
                               <div class="text-14 text-gray3">Стаж 17 лет</div>
                               <div class="text-14 text-gray3">Высшая категория</div>
                             </div>
@@ -2107,13 +2152,12 @@
             <div class="appoint-form__head-right">
               <div class="card-header">
                 <div class="flex-vertical-center gap-16">
-                  <div class="text-14 text-gray"></div>
                   <div class="text-14 text-gray3">Работаем со страховкой</div>
                 </div>
                 <div class="text-24 mb-8">Эристави Тамар</div>
                 <div class="card-header__list">
                   <div class="text-14 text-gray3">Стаж 17 лет</div>
-                  <div class="text-14 text-gray3">Высшая категория</div>
+                  <div class="text-14 text-gray3">Высшая категория </div>
                 </div>
               </div>
               <div class="appoint-form__info-list">
@@ -2167,6 +2211,7 @@
                 <!--======== block data ============-->
               </div>
             </div>
+            <!--======выпадашка с выбором времени и даты. Изначально скрыта. Отображается за счет добавления класса "visible" по клику на кнопку с id="openAppointTime". Повторный клик по кнопке-удаляет класс Visible и выпадашка скрывается====== -->
             <div class="cs-wrapper" id="tableAppointTime">
               <!--======slider navigation=======-->
               <div class="cs-next">
@@ -2978,11 +3023,13 @@
             <div class="appoint-form__head-right">
               <div class="card-header">
                 <div class="flex-vertical-center gap-16">
-                  <div class="text-14 text-gray"></div>
                   <div class="text-14 text-gray3">Работаем со страховкой</div>
                 </div>
                 <div class="text-24 mb-8">Эристави Тамар</div>
                 <div class="card-header__list">
+                  <div class="text-14 text-gray3">Офтальмолог</div>
+                  <div class="text-14 text-gray3">Дерматовенеролог </div>
+                  <div class="text-14 text-gray3">Мануальный терапевт</div>
                   <div class="text-14 text-gray3">Стаж 17 лет</div>
                   <div class="text-14 text-gray3">Высшая категория</div>
                 </div>
@@ -3057,6 +3104,108 @@
             </div>
           </div>
           <div class="review-slider-pagination swiper-pagination"></div>
+        </div>
+      </div>
+    </div>
+  </div>
+  <!--================== модальное окно Авторизация ==============-->
+  <div class="modal-frame-wrapper modal-frame-center" frame-modal="login-modal">
+    <div class="modal-frame flex-column pos-rel">
+      <div class="modal-frame__head flex-column flex-center text-center">
+        <div class="icon-close pos-abs" frame-close></div>
+        <div class="icon-btn arrow-left pos-abs"></div>
+        <div class="modal-logo">
+          <img src="./img/logo-icon.png" width="48" height="48" alt="logo">
+        </div>
+      </div>
+      <!--======= Обертка для сменного, в зависимости от шага авторизации, контента.  Контент скрыт по умолчанию, что бы он отобразился, надо диву с классом "translate-content" добавить класс "visible"  ===============-->
+      <div class="translate-wrapper pt-8 pos-rel">
+        <!--======== #1 - стартовый контент ==================-->
+        <div class="translate-content visible">
+          <div class="text-center">
+            <p class="text-18">Войдите или зарегистрируйтесь</p>
+          </div>
+          <div class="modal-frame__body pt-16">
+            <form class="login-form required-inputs-form">
+              <!--====радиобаттоны Пользователь / Исполнитель =======-->
+              <div class="form-login-role tabs-wrapper" custom-tabs>
+                <div class="tabs flex-box-inline">
+                  <!--==== Пользователь  =======-->
+                  <label class="radiobutton-label flex-box filter-toggle-item" ct-btn="1">
+                    <input class="real-radio" type="radio" name="login-role" value="" checked>
+                    <span class="custom-radio"></span>
+                    <span class="custom-radio__text text-regular">Пользователь</span>
+                  </label>
+                  <label class="radiobutton-label flex-box filter-toggle-item" ct-btn="2">
+                    <input class="real-radio" type="radio" name="login-role" value="">
+                    <span class="custom-radio"></span>
+                    <span class="custom-radio__text text-regular">Исполнитель</span>
+                  </label>
+                </div>
+                <div class="tabs-content flex-grow-1">
+                  <div class="ct-content--active" ct-content="1">
+                    <p>Бронируйте <strong>встречи онлайн круглосуточно - для вас и вашей семьи</strong>. Делитесь отзывами об услугах на сервисе. </p>
+                  </div>
+                  <div ct-content="2">
+                    <p>Рассказывайте о ваших услугах, включайте запись онлайн. </p>
+                    <p>Отвечайте на отзывы пользователей. </p>
+                  </div>
+                </div>
+              </div>
+              <!--======== табы Почта /Телефон ======-->
+              <div class="login-variant-tabs tabs-wrapper pt-32" custom-tabs>
+                <div class="tabs filter-toggle__block flex-box-inline">
+                  <label class="filter-toggle-item" ct-btn="1">
+                    <input class="filter-radiobtn" type="radio" name="login-variant" checked>
+                    <span>Email</span>
+                  </label>
+                  <label class="filter-toggle-item" ct-btn="2">
+                    <input class="filter-radiobtn" type="radio" name="login-variant">
+                    <span>Телефон</span>
+                  </label>
+                </div>
+                <div class="tabs-content pt-32 flex-grow-1">
+                  <div class="ct-content--active" ct-content="1">
+                    <div class="form-box">
+                      <input class="form-input required-input" type="email" placeholder="Email">
+                      <a class="text-link text-red mt-8" href="#!">Сбросить пароль</a>
+                    </div>
+                  </div>
+                  <div ct-content="2">
+                    <div class="form-box">
+                      <input class="form-input required-input" type="tel" placeholder="Телефон">
+                      <div class="text-indigo mt-8">Отправим код</div>
+                    </div>
+                  </div>
+                </div>
+              </div>
+              <!--========= form button ======			-->
+              <div class="form-btn mt-24">
+                <button class="btn btn--gradient w-100 display-required">Войти</button>
+              </div>
+              <!--=====login whith social временно закоменчено==========-->
+              <!--.login-type-social.text-center.pt-32
+								p.mb-24 Войти с помощью
+								.social-group.flex-box.flex-center
+									a(href="#!")
+										img(src="./img/fb-round.png", width="40" height="40" alt="icon")
+									a(href="#!")
+										img(src="./img/inst.png", width="40" height="40" alt="icon")
+									a(href="#!")
+										img(src="./img/google.png", width="40" height="40" alt="icon")
+									a(href="#!")
+										img(src="./img/tg.png", width="40" height="40" alt="icon")
+								
+								-->
+            </form>
+          </div>
+        </div>
+      </div>
+      <!--=======футер модального окна ==========-->
+      <div class="modal-frame__footer pt-32 border-top mt-32">
+        <div class="flex-box flex-between">
+          <a class="text-indigo" href="#!">Перейти на iweek.ge</a>
+          <a class="text-indigo" href="#!">Связаться с нами</a>
         </div>
       </div>
     </div>
