--- a/page-schedule-2.html
+++ b/page-schedule-2.html
@@ -1136,6 +1136,15 @@
       </div>
     </form>
   </div>
+  <!--============	Модальное окно Вы не сохранили внесенные изменения! =====-->
+  <div class="modal-frame-wrapper modal-frame-center visible" frame-modal="save-changes">
+    <div class="modal-frame flex-column p-32 pos-rel">
+      <div class="icon-close pos-abs" frame-close></div>
+      <div class="modal-frame__body text-center">
+        <p class="text-16">Вы не сохранили внесенные изменения!</p>
+      </div>
+    </div>
+  </div>
   <!--=============== jquery ===================-->
   <script src="./libs/jquery/jquery-3.0.0.min.js"></script>
   <!--=============== swiper ===================-->
