--- a/page-tasks.html
+++ b/page-tasks.html
@@ -165,9 +165,9 @@
         <!--=========================== dashboard-table ======================-->
         <div class="dashboard-table">
           <div class="dashboard-table-content scroll-x">
-            <!--============================== Запланировано  =======================-->
+            <!--============================== Запланирован  =======================-->
             <div class="dashboard-table-column state-planer">
-              <div class="dashboard-table-column__head">Запланировано (1)</div>
+              <div class="dashboard-table-column__head">Запланирован (1)</div>
               <div class="scroll-vertical">
                 <div class="dashboard-table-column__wrapper">
                   <a class="dashboard-table-card" href="#!">
@@ -188,14 +188,14 @@
                     <div class="dtc-footer">
                       <span frame-btn="visit-info">03 окт 05:00</span>
                       <div class="state-select">
-                        <div class="state-select-current" data-state="state-planer">Запланировано</div>
+                        <div class="state-select-current" data-state="state-planer">Запланирован</div>
                         <div class="state-select-drop">
                           <div class="state-select-drop__item" data-state="state-started">Начат прием</div>
                           <div class="state-select-drop__item" data-state="state-confirm">Подтвержден</div>
                           <div class="state-select-drop__item" data-state="state-notvisit">Неявка</div>
                           <div class="state-select-drop__item" data-state="state-done">Выполнен</div>
                           <div class="state-select-drop__item" data-state="state-cancel"> Отменен</div>
-                          <div class="state-select-drop__item" data-state="state-planer"> Запланировано</div>
+                          <div class="state-select-drop__item" data-state="state-planer"> Запланирован</div>
                         </div>
                       </div>
                     </div>
@@ -242,7 +242,7 @@
                           <div class="state-select-drop__item" data-state="state-notvisit">Неявка</div>
                           <div class="state-select-drop__item" data-state="state-done">Выполнен</div>
                           <div class="state-select-drop__item" data-state="state-cancel"> Отменен</div>
-                          <div class="state-select-drop__item" data-state="state-planer"> Запланировано</div>
+                          <div class="state-select-drop__item" data-state="state-planer"> Запланирован</div>
                         </div>
                       </div>
                     </div>
@@ -272,7 +272,7 @@
                           <div class="state-select-drop__item" data-state="state-notvisit">Неявка</div>
                           <div class="state-select-drop__item" data-state="state-done">Выполнен</div>
                           <div class="state-select-drop__item" data-state="state-cancel"> Отменен</div>
-                          <div class="state-select-drop__item" data-state="state-planer"> Запланировано</div>
+                          <div class="state-select-drop__item" data-state="state-planer"> Запланирован</div>
                         </div>
                       </div>
                     </div>
@@ -302,7 +302,7 @@
                           <div class="state-select-drop__item" data-state="state-notvisit">Неявка</div>
                           <div class="state-select-drop__item" data-state="state-done">Выполнен</div>
                           <div class="state-select-drop__item" data-state="state-cancel"> Отменен</div>
-                          <div class="state-select-drop__item" data-state="state-planer"> Запланировано</div>
+                          <div class="state-select-drop__item" data-state="state-planer"> Запланирован</div>
                         </div>
                       </div>
                     </div>
@@ -340,7 +340,7 @@
                           <div class="state-select-drop__item" data-state="state-notvisit">Неявка</div>
                           <div class="state-select-drop__item" data-state="state-done">Выполнен</div>
                           <div class="state-select-drop__item" data-state="state-cancel"> Отменен</div>
-                          <div class="state-select-drop__item" data-state="state-planer"> Запланировано</div>
+                          <div class="state-select-drop__item" data-state="state-planer"> Запланирован</div>
                         </div>
                       </div>
                     </div>
@@ -370,7 +370,7 @@
                           <div class="state-select-drop__item" data-state="state-notvisit">Неявка</div>
                           <div class="state-select-drop__item" data-state="state-done">Выполнен</div>
                           <div class="state-select-drop__item" data-state="state-cancel"> Отменен</div>
-                          <div class="state-select-drop__item" data-state="state-planer"> Запланировано</div>
+                          <div class="state-select-drop__item" data-state="state-planer"> Запланирован</div>
                         </div>
                       </div>
                     </div>
@@ -400,7 +400,7 @@
                           <div class="state-select-drop__item" data-state="state-notvisit">Неявка</div>
                           <div class="state-select-drop__item" data-state="state-done">Выполнен</div>
                           <div class="state-select-drop__item" data-state="state-cancel"> Отменен</div>
-                          <div class="state-select-drop__item" data-state="state-planer"> Запланировано</div>
+                          <div class="state-select-drop__item" data-state="state-planer"> Запланирован</div>
                         </div>
                       </div>
                     </div>
@@ -430,7 +430,7 @@
                           <div class="state-select-drop__item" data-state="state-notvisit">Неявка</div>
                           <div class="state-select-drop__item" data-state="state-done">Выполнен</div>
                           <div class="state-select-drop__item" data-state="state-cancel"> Отменен</div>
-                          <div class="state-select-drop__item" data-state="state-planer"> Запланировано</div>
+                          <div class="state-select-drop__item" data-state="state-planer"> Запланирован</div>
                         </div>
                       </div>
                     </div>
@@ -468,7 +468,7 @@
                           <div class="state-select-drop__item" data-state="state-notvisit">Неявка</div>
                           <div class="state-select-drop__item" data-state="state-done">Выполнен</div>
                           <div class="state-select-drop__item" data-state="state-cancel"> Отменен</div>
-                          <div class="state-select-drop__item" data-state="state-planer"> Запланировано</div>
+                          <div class="state-select-drop__item" data-state="state-planer"> Запланирован</div>
                         </div>
                       </div>
                     </div>
@@ -498,7 +498,7 @@
                           <div class="state-select-drop__item" data-state="state-notvisit">Неявка</div>
                           <div class="state-select-drop__item" data-state="state-done">Выполнен</div>
                           <div class="state-select-drop__item" data-state="state-cancel"> Отменен</div>
-                          <div class="state-select-drop__item" data-state="state-planer"> Запланировано</div>
+                          <div class="state-select-drop__item" data-state="state-planer"> Запланирован</div>
                         </div>
                       </div>
                     </div>
@@ -528,7 +528,7 @@
                           <div class="state-select-drop__item" data-state="state-notvisit">Неявка</div>
                           <div class="state-select-drop__item" data-state="state-done">Выполнен</div>
                           <div class="state-select-drop__item" data-state="state-cancel"> Отменен</div>
-                          <div class="state-select-drop__item" data-state="state-planer"> Запланировано</div>
+                          <div class="state-select-drop__item" data-state="state-planer"> Запланирован</div>
                         </div>
                       </div>
                     </div>
@@ -566,7 +566,7 @@
                           <div class="state-select-drop__item" data-state="state-notvisit">Неявка</div>
                           <div class="state-select-drop__item" data-state="state-done">Выполнен</div>
                           <div class="state-select-drop__item" data-state="state-cancel"> Отменен</div>
-                          <div class="state-select-drop__item" data-state="state-planer"> Запланировано</div>
+                          <div class="state-select-drop__item" data-state="state-planer"> Запланирован</div>
                         </div>
                       </div>
                     </div>
@@ -596,7 +596,7 @@
                           <div class="state-select-drop__item" data-state="state-notvisit">Неявка</div>
                           <div class="state-select-drop__item" data-state="state-done">Выполнен</div>
                           <div class="state-select-drop__item" data-state="state-cancel"> Отменен</div>
-                          <div class="state-select-drop__item" data-state="state-planer"> Запланировано</div>
+                          <div class="state-select-drop__item" data-state="state-planer"> Запланирован</div>
                         </div>
                       </div>
                     </div>
@@ -626,7 +626,7 @@
                           <div class="state-select-drop__item" data-state="state-notvisit">Неявка</div>
                           <div class="state-select-drop__item" data-state="state-done">Выполнен</div>
                           <div class="state-select-drop__item" data-state="state-cancel"> Отменен</div>
-                          <div class="state-select-drop__item" data-state="state-planer"> Запланировано</div>
+                          <div class="state-select-drop__item" data-state="state-planer"> Запланирован</div>
                         </div>
                       </div>
                     </div>
@@ -664,7 +664,7 @@
                           <div class="state-select-drop__item" data-state="state-notvisit">Неявка</div>
                           <div class="state-select-drop__item" data-state="state-done">Выполнен</div>
                           <div class="state-select-drop__item" data-state="state-cancel"> Отменен</div>
-                          <div class="state-select-drop__item" data-state="state-planer"> Запланировано</div>
+                          <div class="state-select-drop__item" data-state="state-planer"> Запланирован</div>
                         </div>
                       </div>
                     </div>
@@ -694,7 +694,7 @@
                           <div class="state-select-drop__item" data-state="state-notvisit">Неявка</div>
                           <div class="state-select-drop__item" data-state="state-done">Выполнен</div>
                           <div class="state-select-drop__item" data-state="state-cancel"> Отменен</div>
-                          <div class="state-select-drop__item" data-state="state-planer"> Запланировано</div>
+                          <div class="state-select-drop__item" data-state="state-planer"> Запланирован</div>
                         </div>
                       </div>
                     </div>
@@ -710,7 +710,7 @@
   <!--================== Информация о приеме мод окно ==============-->
   <div class="modal-frame-wrapper modal-frame-right" frame-modal="visit-info">
     <div class="modal-frame flex-column">
-      <div class="modal-frame__head flex-box flex-y-center flex-between">
+      <div class="modal-frame__head border-none flex-box flex-y-center flex-between">
         <div class="text-24">Информация о приеме</div>
         <div class="icon-close" frame-close></div>
       </div>
@@ -719,8 +719,37 @@
           <table>
             <tbody>
               <tr>
-                <td>Дата и время</td>
-                <td>28 нояб., 09:00—09:30</td>
+                <td>Дата</td>
+                <td class="edit-visit-date">
+                  <div class="mydatepicker">
+                    <input class="form-input datepicker" type="text" value="20.04.2023">
+                  </div>
+                </td>
+              </tr>
+              <tr class="edit-visit-time">
+                <td>Время</td>
+                <td class="flex-vertical-center gap-16">
+                  <!--== окошко  tooltip-error-text отображается при наличии класса visible. Оно содержит информацию, что время не может быть выбрано. Сейчас по дефолту у него есть класс visible, что оно отображалось. Рендерить его надо внутри дива с классом pos-rel после инпутов-->
+                  <!--=== Инпуту красную рамку задает класс input-notvalid== -->
+                  <span>c</span>
+                  <div class="flex-vertical-center gap-4 pos-rel">
+                    <input class="form-input input-notvalid" type="number" name="" value="09">
+                    <span>:</span>
+                    <input class="form-input input-notvalid" type="number" name="" value="30">
+                    <div class="tooltip-error-text tooltip-modal tooltip-modal--mini text-12 visible">
+                      <p>Время недоступно, </p>
+                      <p>выберите другое</p>
+                      <div class="tooltip-close icon-close"></div>
+                    </div>
+                  </div>
+                  <span>до</span>
+                  <!--==== класс .input-notvalid задает красную рамку для инпут. Класс visible делает видимым  тултип-->
+                  <div class="flex-vertical-center gap-4 pos-rel">
+                    <input class="form-input" type="number" name="" value="10">
+                    <span>:</span>
+                    <input class="form-input" type="number" name="" value="30">
+                  </div>
+                </td>
               </tr>
               <tr class="doctor-info">
                 <td>Врач</td>
@@ -759,7 +788,7 @@
           </table>
         </div>
       </div>
-      <div class="modal-frame__footer mt-auto border-top">
+      <div class="modal-frame__footer mt-auto flex-box">
         <div class="state-select state-select--opentop">
           <div class="state-select-current" data-state="state-started">Начат прием</div>
           <div class="state-select-drop">
@@ -769,6 +798,9 @@
             <div class="state-select-drop__item" data-state="state-done">Выполнен</div>
             <div class="state-select-drop__item" data-state="state-cancel"> Отменен</div>
           </div>
+        </div>
+        <div class="ml-auto">
+          <button class="btn btn-44">Сохранить</button>
         </div>
       </div>
     </div>
