--- a/prices.html
+++ b/prices.html
@@ -79,12 +79,12 @@
                   <a class="text-icon text-phone text-white" href="#!">+995 551 405 123</a>
                 </div>
               </div>
-              <a class="btn btn-mini dark-btn" href="page-schedule.html">
+              <button class="btn btn-mini dark-btn" frame-btn="login-modal">
                 <svg class="svg-person" width="16" height="16">
                   <use href="./img/svg-sprite.svg#svg-person"></use>
                 </svg>
-                <div class="text-white">Кабинет</div>
-              </a>
+                <div class="text-white">Войти</div>
+              </button>
               <!--=============Выбор страны и валюты на экранах от 992 пикс ================-->
               <div class="mySelect mySelect--absolute mySelect--dark mySelect--radio mySelect--currency">
                 <div class="mySelect-input">
