--- a/add-profile-visitor.html
+++ b/add-profile-visitor.html
@@ -153,11 +153,13 @@
             <div class="form-fieldset">
               <div class="grid-form-fields gap-32">
                 <div class="form-box">
-                  <label class="text-16">Фамилия</label>
+                  <label class="text-16">Фамилия<sup class="text-red">*</sup>
+                  </label>
                   <input class="form-input" type="text" placeholder="Фамилия">
                 </div>
                 <div class="form-box">
-                  <label class="text-16">Имя</label>
+                  <label class="text-16">Имя<sup class="text-red">*</sup>
+                  </label>
                   <input class="form-input" type="text" placeholder="Имя">
                 </div>
                 <div class="form-box">
@@ -208,7 +210,8 @@
                   </div>
                 </div>
                 <div class="form-box">
-                  <label class="text-16">Дата рождения</label>
+                  <label class="text-16">Дата рождения<sup class="text-red"> *</sup>
+                  </label>
                   <div class="mydatepicker">
                     <input class="form-input datepicker" type="text" value="01.01.2022">
                   </div>
@@ -314,9 +317,9 @@
           <!--==== .content-list-->
           <!--==== 		ul-->
           <!--====			li-->
-          <div class="flex-vertical-center flex-between mt-40">
-            <button class="btn btn-44 btn--orange" frame-close>Отмена</button>
+          <div class="flex-vertical-center gap-20 mt-40">
             <button class="btn btn-44" frame-close>Сохранить</button>
+            <button class="btn btn-44 btn--orange" frame-close>Отменить</button>
           </div>
         </form>
       </div>
@@ -343,9 +346,9 @@
           <!--==== .content-list-->
           <!--==== 		ul-->
           <!--====			li-->
-          <div class="flex-vertical-center flex-between mt-40">
-            <button class="btn btn-44 btn--orange" frame-close>Отмена</button>
+          <div class="flex-vertical-center gap-20 mt-40">
             <button class="btn btn-44" frame-close>Сохранить</button>
+            <button class="btn btn-44 btn--orange" frame-close>Отменить</button>
           </div>
         </form>
       </div>
