--- a/visitor-edit-page.html
+++ b/visitor-edit-page.html
@@ -212,9 +212,9 @@
                 </div>
               </div>
             </div>
-            <div class="flex-vertical-center flex-between mt-40">
-              <button class="btn btn-44 btn--orange" frame-close>Отмена</button>
+            <div class="flex-vertical-center gap-20 mt-40">
               <button class="btn btn-44" frame-close>Добавить</button>
+              <button class="btn btn-44 btn--orange" frame-close>Отменить</button>
             </div>
           </form>
         </div>
